tests/fixtures/invalid/pow_float_set_str.py
# Cannot call pow() with Float, Set[int], Str
x = pow(1.0, {1, 2, 3}, "hello")
